--- a/src/components/Header/HeaderContent.css
+++ b/src/components/Header/HeaderContent.css
@@ -1,3 +1,13 @@
+.header__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  height: 100vh;
+  font-family: var(--header-font);
+  color: var(--color-white);
+}
+
 .header__content h1 {
   font-size: 3rem;
   font-weight: 400;
@@ -12,6 +22,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .header__content {
+    height: calc(100vh - 135px);
+  }
+
   .header__content h1 {
     font-size: 4rem;
   }
