--- a/src/components/common/Button.css
+++ b/src/components/common/Button.css
@@ -3,6 +3,7 @@
   outline: none;
   border: none;
   border-radius: 5px;
+  max-width: fit-content;
   background-color: var(--primary-color);
   color: var(--color-white);
   transition: 0.3s;
