--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   margin: auto;
-  max-width: 1200px;
+  max-width: 100%;
   height: 100vh;
   background-image: linear-gradient(
       to bottom,
